@@ -22,8 +22,9 @@ import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -35,13 +36,13 @@ import java.util.Map;
  */
 public class GraphSchemaMapper {
     private List<SchemaElementMapper> types;
-    private int version;
+    private String version;
 
     public List<SchemaElementMapper> getTypes() {
         return types;
     }
 
-    public int getVersion() {
+    public String getVersion() {
         return version;
     }
 
@@ -93,9 +94,9 @@ public class GraphSchemaMapper {
             GraphSchemaMapper graphSchema = new GraphSchemaMapper();
             JsonNode jsonNode = mapper.readTree(schemaJson);
             if (jsonNode.has("version")) {
-                graphSchema.version = jsonNode.get("version").asInt();
+                graphSchema.version = jsonNode.get("version").asText();
             } else {
-                graphSchema.version = 0;
+                graphSchema.version = "0";
             }
             graphSchema.types = new ArrayList<>();
             JsonNode typeArray = jsonNode.get("types");
@@ -118,7 +119,7 @@ public class GraphSchemaMapper {
 
     public static void main(String[] args) throws IOException {
         String path = "groot-server/src/test/resources/schema.json";
-        String schemaJson = Files.readString(Path.of(path));
+        String schemaJson = new String(Files.readAllBytes(Paths.get(path)), StandardCharsets.UTF_8);
         GraphSchema graphSchema = GraphSchemaMapper.parseFromJson(schemaJson).toGraphSchema();
         GraphSchemaMapper mapper = GraphSchemaMapper.parseFromSchema(graphSchema);
         System.out.println(mapper.toJsonString());
